# vins_rebuild

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  test_euroc.cpp  test_huawei.cpp
cmake_modules/: FindSuiteSparse.cmake
config/: euroc.yaml  huawei.yaml
include/: estimator.h  estimatorparameters.h  feature_manager.h  feature_tracker.h  featuretrackerparameters.h  global_param.hpp  system.h  visualization2.h
include/camera_model/calib/: CameraCalibration.h
include/factor/: imu_factor.h  integration_base.h  marginalization_factor.h  pose_local_parameterization.h  projection_factor.h  projection_td_factor.h
include/initial/: initial_alignment.h  initial_ex_rotation.h
include/pose_graph/: MapDrawer.h  keyframe.h  pgsystem.h  pose_graph.h  posegraphparameters.h  utility.h
src/: CMakeLists.txt  estimator.cpp  estimatorparameters.cpp  feature_manager.cpp  feature_tracker.cpp  featuretrackerparameters.cpp  system.cpp  visualization2.cpp
src/camera_model/calib/: CameraCalibration.cc
src/factor/: marginalization_factor.cpp  projection_factor.cpp  projection_td_factor.cpp
src/initial/: initial_alignment.cpp  initial_ex_rotation.cpp
src/pose_graph/: MapDrawer.cpp  keyframe.cpp  pgsystem.cpp  pose_graph.cpp  posegraphparameters.cpp  utility.cpp
